[package]
name = "escrunch"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rayoff.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_visit.workspace = true
portal-solutions-swibb.workspace = true
